2.1 regression: autoscale fails with maximized window
If the VLC window (Qt4) is maximized before the video playback starts, the video is shown in the top left corner (at 1:1 scale) instead of being adjusted to occupy most of the desktop.
I guess (not checked) that VLC tries to resize the window (for 100% zoom) and ignores the fact that resizing fails.